@@ -1,4 +1,4 @@
 AUX libview-0.5.6-pcfix.patch 600 RMD160 58869acfda194c671bc6c858d0f8cfd7bc62851b SHA1 393d7d2e440173cd0cb2edc7de10629dab1f1c6e SHA256 4d93c8067fb1d371780a665fff731dd27ce3daac983ea63efbb7ba2bad492d39
 DIST libview-0.6.2.tar.bz2 279507 RMD160 6483afadda26dc47382de1c68e2e388d2d6fde5f SHA1 03072adca31982019db7409300dc804ea2bf3c4e SHA256 2d9874491ba696bc264750fdb371c0eabae47e82a2709f31d2fa3501e8cf7eb3
-EBUILD libview-0.6.2.ebuild 645 RMD160 39362b4d3435ad3b0d9c5a99776b134114eddd43 SHA1 92c2c1c877926bde7d3597da59766021ef4da812 SHA256 f883257e7821285fc68e35a598c238837d61bd3c814a421888f7040d9ac9415b
+EBUILD libview-0.6.2.ebuild 784 RMD160 896df3464f8d5a82ce09ab92ddfa146d8b409365 SHA1 ff1d06a38df53a566cdd4a1c39b214deeadd7e33 SHA256 82ceeb9bee8f9f05288984d2a7edca76660b4fe77da144a13de8afd7be2b56b9
 MISC metadata.xml 311 RMD160 868d0eab62db916aa47b7f440a3f4efecc6163b1 SHA1 0e56da7be32af7c553c07179c574cd7837298702 SHA256 774cc71e08a317563fb2700d5aac76af10e3e31ae7c1c58325730bfa0fbb110a
